--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,12 @@
             <artifactId>jxls-poi</artifactId>
             <version>1.0.15</version>
         </dependency>
+        <!--阿里easypoi-->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>easyexcel</artifactId>
+            <version>2.1.7</version>
+        </dependency>
 
     </dependencies>
 
